[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/overworld/images/building-icon.png" type="Texture" id=1]
[ext_resource path="res://ui/recycling_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/overworld/overworld_building.gd" type="Script" id=3]
[ext_resource path="res://scenes/overworld/audio/bong_001.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 4 )

[node name="Building" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 6.96, 10.56 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -106.0
margin_top = -2.0
margin_right = 116.0
margin_bottom = 91.0
theme = ExtResource( 2 )
text = "Building Name"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )

[connection signal="input_event" from="." to="." method="_on_Building_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Building_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Building_mouse_exited"]
